--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
         <div class="nav-menu">
         	<a href="index.html">HOME</a>
-        	<a href="#">A NEVES & LELIS</a>
-        	<a href="#">ESPECIALIDADES</a>
-        	<a href="#">EQUIPE</a>
-        	<a href="#">NOTICIAS</a>        	
-        	<a href="#">CONTATO</a> 
+        	<a href="#">ESTRUTURA</a>
+        	<a href="#">PREÇOS</a>
+        	<a href="#">LOCALIZAÇÃO</a>
+        	<a href="#">FALE CONOSCO</a>        	
+        	<a href="#">RESERVAS</a> 
         </div>        
     </nav>
 
@@ -186,9 +186,6 @@
 
 
 
-
-
-
 <div class="sociais">
     <div class="container">
         <div class="row">
@@ -219,9 +216,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 
 <div class="conceito">
