--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
                 <a href="" target="_blank">
                     <div class="social-1 wow fadeInUp">
                         <i class="fa fa-facebook social-3" aria-hidden="true"></i>
-                        <p>CURTA NOSSA FÃ PAGE NO FACEBOOK</p>
+                        <p>CURTA NO FACEBOOK</p>
+                       <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FHotel-Sara-Palace-198824960168750%2F&width=58&layout=button&action=like&size=small&show_faces=true&share=false&height=65&appId" width="58" height="65" style="border:none;overflow:hidden" class="iconface" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
                     </div>
                 </a>
             </div>  
@@ -206,7 +207,18 @@
                 <a href="" target="_blank">
                     <div class="social-1 wow fadeInUp">
                         <i class="fa fa-google-plus social-4" aria-hidden="true"></i>
-                        <p>RECO SIGA A GENTE NO INSTAGRAM</p>
+                        <p>RECOMENDE NO GOOGLE +</p>
+
+
+
+<script src="https://apis.google.com/js/platform.js" async defer>
+  {lang: 'pt-BR'}
+</script>
+
+
+<div class="g-plusone icongoo" data-href="" data-annotation="none"></div>
+
+
                     </div>
                 </a>                
             </div>  
@@ -343,7 +355,7 @@ nosso caso, levando em consideração a qualidade de serviços por nós oferecid
                     Localizado em Uberlândia- MG, em uma das principais vias da cidade, o Sara Palace Hotel é um ponto de fácil acesso para todos os lugares da cidade.
                 </span>
                 <span class="end2">                    
-                    Av. João Naves de Ávila, 491, Bairro Santa Mônica, Cep: 38408-288, Uberlândia - MG
+                    Av. João Naves de Ávila, 4921, Bairro Santa Mônica, Cep: 38408-288, Uberlândia - MG
                 </span>
             </div>
         </div>
@@ -393,7 +405,7 @@ nosso caso, levando em consideração a qualidade de serviços por nós oferecid
                     Sara Palace Hotel
                 </span>
                 <span class="footer-end">
-                    Av. João Naves de Ávila, 491<br/>
+                    Av. João Naves de Ávila, 4921<br/>
                     Bairro Santa Mônica, Uberlândia - MG<br/>
                     (34) 3227-0915 contato@sarapalacehotel.com.br                    
                 </span>
