--- a/reserva.html
+++ b/reserva.html
@@ -96,7 +96,7 @@
                     <h1 class="title-suite">solicitação de <strong>reserva</strong></h1>  
                 </div>
                 <div class="col-md-6">
-                    <p>É uma honra receber você em nosso hotel. Para confirmar sua solicitação de reserva preencha seus dados nos campos ao lado. Em breve nossa rfecepção entrará em contato com você para confirmar sua reserva. Fique tranquilo(a)!</p>
+                    <p>É uma honra receber você em nosso hotel. Para confirmar sua solicitação de reserva preencha seus dados nos campos ao lado. Em breve nossa recepção entrará em contato com você para confirmar sua reserva. Fique tranquilo(a)!</p>
                     <span class="page-suite-titu">esta foi a suíte que você escolheu!</span>
                     <div class="page-box">
                         <div class="page-box0">
@@ -151,9 +151,9 @@
                     Sara Palace Hotel
                 </span>
                 <span class="footer-end">
-                    Av. João Naves de Ávila, 4921<br/>
+                    Av. João Naves de Ávila, 4.921<br/> 
                     Bairro Santa Mônica, Uberlândia - MG<br/>
-                    (34) 3227-0915 contato@sarapalacehotel.com.br                    
+                    (34) 3227-0915 sara@redeshoteis.com.br                   
                 </span>
                 <span class="footer-social">
                     <a href=""><i class="fa fa-instagram footer-rede" aria-hidden="true"></i></a>
