--- a/single.html
+++ b/single.html
@@ -148,9 +148,9 @@ privativo e cabideiro.</p>
                     Sara Palace Hotel
                 </span>
                 <span class="footer-end">
-                    Av. João Naves de Ávila, 4921<br/>
+                    Av. João Naves de Ávila, 4.921<br/>
                     Bairro Santa Mônica, Uberlândia - MG<br/>
-                    (34) 3227-0915 contato@sarapalacehotel.com.br                    
+                    (34) 3227-0915 sara@redeshoteis.com.br                   
                 </span>
                 <span class="footer-social">
                     <a href=""><i class="fa fa-instagram footer-rede" aria-hidden="true"></i></a>
