--- a/estrutura.html
+++ b/estrutura.html
@@ -95,7 +95,7 @@
             <div class="col-md-12">
                 <h1 class="title-sigle">nossa <strong>estrutura</strong></h1>
                 <p>Todos os quartos foram feitos para o seu conforto e comodidade na sua estadia. 
-As suítes possuem Tv com canais a cabo, ar condicionado, frigobar, banheiro 
+As suítes possuem Tv com canais a cabo, ar condicionado, wifi, banheiro 
 privativo e cabideiro.</p>
 
                 <div class="suites">                   
@@ -148,9 +148,9 @@ privativo e cabideiro.</p>
                     Sara Palace Hotel
                 </span>
                 <span class="footer-end">
-                    Av. João Naves de Ávila, 4921<br/>
+                    Av. João Naves de Ávila, 4.921<br/> 
                     Bairro Santa Mônica, Uberlândia - MG<br/>
-                    (34) 3227-0915 contato@sarapalacehotel.com.br                    
+                    (34) 3227-0915 sara@redeshoteis.com.br                   
                 </span>
                 <span class="footer-social">
                     <a href=""><i class="fa fa-instagram footer-rede" aria-hidden="true"></i></a>
