--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ nosso caso, levando em consideração a qualidade de serviços por nós oferecid
                             Todos os quartos foram feitos para o seu 
                             conforto e comodidade na sua estadia. 
                             As suítes possuem Tv com canais a cabo, ar 
-                            condicionado, frigobar, banheiro privativo
+                            condicionado, wifi, banheiro privativo
                             e cabideiro.
                         </span>
                         <a href="estrutura.html" class="btn-ver">VER</a>
@@ -318,7 +318,7 @@ nosso caso, levando em consideração a qualidade de serviços por nós oferecid
 
                 <div class="box3-flex wow slideInLeft">
                     <div class="box3-desc">
-                        SABÁDO OU DOMINGO APARTAMENTO CASAL
+                        SABÁDO OU DOMINGO APARTAMENTO CASAL E DUPLO
                         <span class="box3-desc2">Com café da manhã grátis</span>
                     </div>
                     <div class="box3-valor">
@@ -405,9 +405,9 @@ nosso caso, levando em consideração a qualidade de serviços por nós oferecid
                     Sara Palace Hotel
                 </span>
                 <span class="footer-end">
-                    Av. João Naves de Ávila, 4921<br/>
+                    Av. João Naves de Ávila, 4.921<br/>                    
                     Bairro Santa Mônica, Uberlândia - MG<br/>
-                    (34) 3227-0915 contato@sarapalacehotel.com.br                    
+                    (34) 3227-0915 sara@redeshoteis.com.br                   
                 </span>
                 <span class="footer-social">
                     <a href=""><i class="fa fa-instagram footer-rede" aria-hidden="true"></i></a>
