--- a/precos.html
+++ b/precos.html
@@ -120,7 +120,7 @@
 
                 <div class="box3-flex">
                     <div class="box3-desc">
-                        SABÁDO OU DOMINGO APARTAMENTO CASAL
+                        SABÁDO OU DOMINGO APARTAMENTO CASAL E DUPLO
                         <span class="box3-desc2">Com café da manhã grátis</span>
                     </div>
                     <div class="box3-valor">
